Project3/testcases/moretest14.out

*** Error line 3.
	vec4 otherVec = someVec.xyxx;
                        ^^^^^^^
*** syntax error

