Project3/testcases/moretest14.glsl
void main() {
	vec2 someVec;
	vec4 otherVec = someVec.xyxx;
	vec3 thirdVec = otherVec.zyy;
}
